# fractal_flame_renderer_haskell

./: .gitignore  LICENSE  README.md  fractalflame.cabal
FractalFlame/: Camera.hs  Color.hs  Demo.hs  Flame.hs  GLDisplay.hs  Generator.hs  Histogram.hs  IFS.hs  IFSTypes.hs  LinearTransformation.hs  Main.hs  Palette.hs  ParseFlam3.hs  Symmetry.hs  Variation.hs
FractalFlame/Camera/Types/: Camera.hs
FractalFlame/Color/Types/: Color.hs
FractalFlame/Flam3/: Flame.hs  Parse.hs
FractalFlame/Flam3/Types/: Color.hs  Flame.hs  Xform.hs
FractalFlame/Generator/Types/: Generator.hs
FractalFlame/Palette/Types/: Palette.hs
FractalFlame/Point/Types/: CartesianPoint.hs  GridPoint.hs  Point.hs
FractalFlame/Types/: Base.hs  LinearParams.hs  PixelFlame.hs  Plottable.hs  Size.hs  Transform.hs
FractalFlame/Variation/: Util.hs  VTransforms.hs
FractalFlame/Variation/Types/: VParams.hs  VTransform.hs  VarP.hs  Variation.hs
flam3/: electricsheep.244.73060.flam3  electricsheep.244.73681.flam3  sierpinski_swirl_pie_demo_big.flam3  sierpinski_swirl_pie_demo_medium.flam3  sierpinski_swirl_pie_demo_medium_ransym.flam3  sierpinski_swirl_pie_demo_medium_symmetry.flam3
profiling/: run
