Name:           fractalflame
Version:        0.1
Synopsis:       A renderer for Scott Draves' Fractal Flame algorithm.
Description: 
  Implements the FLAM3 algorithm for rendering fixed-point solutions 
  to Iterated Function Sets as 2D images in Haskell.  
  Based on Scott Draves' paper, available at http://flam3.com/flame.pdf.
  This algorithm is used to render the images such as those that appear 
  in Draves' popular ElectricSheep screensaver, available at 
  electricsheep.org.
Author:         Ted Cooper
Maintainer:     Ted Cooper <anthezium@gmail.com>
License:        BSD3
License-file:   LICENSE
cabal-version:  >= 1.6
build-type:     Custom

executable demo
  main-is: FractalFlame/Main.hs
  build-depends: 
    base,
    array,
    GLUT,
    QuickCheck,
    random,
    hxt,
    regexpr,
    unordered-containers
  ghc-options: -O -rtsopts -with-rtsopts=-K128000000
  extensions:
    Arrows, 
    BangPatterns,
    NoMonomorphismRestriction,
    ScopedTypeVariables
